# daily-planner

./: .dockerignore  API_REFERENCE.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  V2.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docker/: setup-credentials.sh
scripts/: version-update.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/web/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs  mcp_server.rs  tunnel.rs
src-tauri/src/commands/: ai_providers.rs  auto_backup.rs  claude.rs  copilot.rs  data_management.rs  git.rs  jobs.rs  mod.rs  projects.rs  reports.rs  settings.rs  tasks.rs  worktree.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src-tauri/src/http_server/: mod.rs
src-tauri/src/scheduler/: jobs.rs  mod.rs
src-tauri/src/tray/: mod.rs
src/components/: AiProviderSelector.tsx  PromptQueue.tsx  ReviewPanel.tsx  TaskCreationModal.tsx
src/hooks/: useClaude.ts  useKeyboardShortcuts.ts  useNotifications.ts  usePromptQueue.ts  useSessionDraftState.ts  useSessionTimer.ts  useUnifiedQueue.ts
src/lib/: eventSource.ts  http.ts  markdown.ts  masterPromptComposer.ts  projectPath.ts  promptImprover.ts  session.ts  tauri.ts  time.ts
src/pages/: Dashboard.tsx  FocusMode.tsx  HistoryPage.tsx  Login.tsx  MorningPlanning.tsx  ProjectDetail.tsx  ProjectsPage.tsx  PromptPage.tsx  QueuePage.tsx  (+5 more)
(+76 files in other folders)
