[package]
name = "daily-planner"
version = "0.1.2"
description = "Developer Daily Planner"
authors = []
edition = "2021"
default-run = "daily-planner"

[lib]
name = "daily_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synq-server"
path = "src/bin/synq_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
futures-util = "0.3"
bytes = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = "0.1"
sha2 = "0.10"
argon2 = "0.5"
cookie = "0.18"
open = "5"
